--- a/src/app/glycemie-form/glycemie-form.component.html
+++ b/src/app/glycemie-form/glycemie-form.component.html
@@ -1,1 +1,40 @@
-<p>glycemie-form works!</p>
+<div class="card my-5">
+  <div class="card-body">
+    <form (ngSubmit)="onSubmit()" #glycemieForm ="ngForm">
+      <div class="form-group">
+        <label for="value">Value</label>
+        <input type="number" [(ngModel)]="glycemie.value"
+        class="form-control"
+               id="value"
+               name="value"
+               placeholder="Enter value of glycemie"
+               required #value ="ngModel">
+      </div>
+      <div [hidden]="!value.pristine" class="alert alert-danger">Value is required</div>
+      <div class="form-group">
+        <label for="unit">Unit</label>
+        <input type="text" [(ngModel)]="glycemie.unit"
+               class="form-control"
+               id="unit"
+               name="unit"
+               placeholder="Enter unit"
+               required #unit ="ngModel">
+        <div [hidden]="!unit.pristine" class="alert alert-danger">Unit is required</div>
+      </div>
+      <div class="form-group">
+        <label for="date">Date</label>
+        <input type="datetime-local" [(ngModel)]="glycemie.date"
+               class="form-control"
+               id="date"
+               name="date"
+               placeholder="Enter date "
+               required #unit ="ngModel">
+        <div [hidden]="!unit.pristine" class="alert alert-danger">date is required</div>
+      </div>
+      <button type="submit" [disabled]="!glycemieForm.form.valid"
+              class="btn btn-info">Submit</button>
+
+    </form>
+  </div>
+</div>
+<router-outlet />
