--- a/src/app/glycemie-form/glycemie-form.component.html
+++ b/src/app/glycemie-form/glycemie-form.component.html
@@ -31,6 +31,17 @@
                required #unit ="ngModel">
         <div [hidden]="!unit.pristine" class="alert alert-danger">date is required</div>
       </div>
+
+      <div class="form-group">
+        <label for="mealTime">MealTime</label>
+        <input type="text" [(ngModel)]="glycemie.mealTime"
+               class="form-control"
+               id="mealTime"
+               name="mealTime"
+               placeholder="your meal time is before lunch or after that "
+               required #mealTime ="ngModel">
+        <div [hidden]="!mealTime.pristine" class="alert alert-danger">MealTime is required</div>
+      </div>
       <button type="submit" [disabled]="!glycemieForm.form.valid"
               class="btn btn-info">Submit</button>
 
