--- a/src/app/glycemie-list/glycemie-list.component.html
+++ b/src/app/glycemie-list/glycemie-list.component.html
@@ -8,6 +8,7 @@
           <th scope="col">Value</th>
           <th scope="col">Unit</th>
           <th scope="col">Date</th>
+          <th scope="col">MealTime</th>
           <th scope="col">Actions</th>
         </tr>
         </thead>
@@ -17,6 +18,7 @@
           <td>{{ glycemie.value }}</td>
           <td>{{ glycemie.unit}}</td>
           <td>{{ glycemie.date}}</td>
+          <td>{{ glycemie.mealTime}}</td>
           <td>
             <button class="btn btn-danger" type="button" (click)="deleteGlycemie(glycemie.id)">Delete</button>
           </td>
