--- a/src/app/update-glycemie-form/update-glycemie-form.component.html
+++ b/src/app/update-glycemie-form/update-glycemie-form.component.html
@@ -1,23 +1,27 @@
-<form [formGroup]="glycemieForm" (ngSubmit)="onSubmit()">
-  <div class="form-group">
-    <label for="value">Value</label>
-    <input type="number" formControlName="value" class="form-control" id="value" required>
+<div class="card my-5">
+  <div class="card-body">
+    <form [formGroup]="glycemieForm" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="value">Value</label>
+        <input type="number" formControlName="value" class="form-control" id="value" placeholder="Enter value" required>
+      </div>
+      <div class="form-group">
+        <label for="unit">Unit</label>
+        <input type="text" formControlName="unit" class="form-control" id="unit" placeholder="Enter unit" required>
+      </div>
+      <div class="form-group">
+        <label for="date">Date</label>
+        <input type="datetime-local" formControlName="date" class="form-control" id="date" required>
+      </div>
+      <div class="form-group">
+        <label for="mealTime">MealTime</label>
+        <input type="text" formControlName="mealTime" class="form-control" id="mealTime" placeholder="Enter meal time" required>
+      </div>
+      <div class="form-group">
+        <label for="source">Source</label>
+        <input type="text" formControlName="source" class="form-control" id="source" placeholder="Enter source" required>
+      </div>
+      <button type="submit" [disabled]="!glycemieForm.valid" class="btn btn-info">Submit</button>
+    </form>
   </div>
-  <div class="form-group">
-    <label for="unit">Unit</label>
-    <input type="text" formControlName="unit" class="form-control" id="unit" required>
-  </div>
-  <div class="form-group">
-    <label for="date">Date</label>
-    <input type="datetime-local" formControlName="date" class="form-control" id="date" required>
-  </div>
-  <div class="form-group">
-    <label for="mealTime">MealTime</label>
-    <input type="text" formControlName="mealTime" class="form-control" id="mealTime" required>
-  </div>
-  <div class="form-group">
-    <label for="source">Source</label>
-    <input type="text" formControlName="source" class="form-control" id="source" required>
-  </div>
-  <button type="submit" [disabled]="!glycemieForm.valid" class="btn btn-info">Submit</button>
-</form>
+</div>
