--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -1,33 +1,15 @@
 <div class="card my-5">
   <div class="card-body">
-    <form (ngSubmit)="onSubmit()" #userForm="ngForm">
+    <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="name">Name</label>
-        <input type="text" [(ngModel)]="user.name"
-               class="form-control"
-               id="name"
-               name="name"
-               placeholder="Enter your name"
-               required #name="ngModel">
+        <input type="text" formControlName="name" class="form-control" id="name" placeholder="Enter your name" required>
       </div>
-      <div [hidden]="!name.pristine" class="alert alert-danger">Name is required</div>
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" [(ngModel)]="user.email"
-               class="form-control"
-               id="email"
-               name="email"
-               placeholder="Enter your email address"
-               required #email="ngModel">
-        <div [hidden]="!email.pristine" class="alert alert-danger">Email is required</div>
+        <input type="email" formControlName="email" class="form-control" id="email" placeholder="Enter your email address" required>
       </div>
-
-      <button type="submit" [disabled]="!userForm.form.valid"
-              class="btn btn-info">Submit</button>
+      <button type="submit" [disabled]="!userForm.valid" class="btn btn-info">Submit</button>
     </form>
   </div>
 </div>
-
-
-
-<router-outlet />
