--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -16,7 +16,7 @@
           <td>{{ user.name }}</td>
           <td><a href="mailto:{{ user.email }}">{{ user.email }}</a></td>
           <td>
-            <a class="btn btn-primary" [routerLink]="['/update-user/:id', user.id]">Update</a>
+            <a class="btn btn-primary" [routerLink]="['/update-user', user.id]">Update User</a>
             <button class="btn btn-danger" type="button" (click)="deleteUser(user.id)">Delete</button>
           </td>
         </tr>
