--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,66 @@
-<footer class="footer bg-light text-center text-lg-start">
-  <div class="text-center p-3">
-    © 2024 Diabetes Tracker:
-    <a class="text-dark" href="https://yourwebsite.com/">yourwebsite.com</a>
+<footer id="footer" class="footer">
+  <div class="container footer-top">
+    <div class="row gy-4">
+      <div class="col-lg-4 col-md-6 footer-about">
+        <a href="/" class="logo d-flex align-items-center">
+          <span class="sitename">Medilab</span>
+        </a>
+        <div class="footer-contact pt-3">
+          <p>Beni Mellal</p>
+          <p>Morocco</p>
+          <p class="mt-3"><strong>Phone:</strong> <span>+1 1111 11111 11</span></p>
+          <p><strong>Email:</strong> <span>Health.com</span></p>
+        </div>
+        <div class="social-links d-flex mt-4">
+          <a href="#"><i class="bi bi-twitter"></i></a>
+          <a href="#"><i class="bi bi-facebook"></i></a>
+          <a href="#"><i class="bi bi-instagram"></i></a>
+          <a href="#"><i class="bi bi-linkedin"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-2 col-md-3 footer-links">
+        <h4>Health Resources</h4>
+        <ul>
+          <li><a href="#">Diabetes Management</a></li>
+          <li><a href="#">Nutrition Advice</a></li>
+          <li><a href="#">Exercise Guidelines</a></li>
+          <li><a href="#">Medication Information</a></li>
+          <li><a href="#">Support Groups</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-2 col-md-3 footer-links">
+        <h4>DT</h4>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Our Services</a></li>
+          <li><a href="#">Blood Glucose Log</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-2 col-md-3 footer-links">
+        <h4>Resources</h4>
+        <ul>
+          <li><a href="#">Glucose Monitoring Tips</a></li>
+          <li><a href="#">Healthy Eating</a></li>
+          <li><a href="#">Exercise and Fitness</a></li>
+          <li><a href="#">Diabetes Education</a></li>
+          <li><a href="#">Support Groups</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-2 col-md-3 footer-links">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">FAQ</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="container copyright text-center mt-4">
+    <p>© <span>Copyright</span> <strong class="px-1 sitename">Medilab</strong> <span>All Rights Reserved</span></p>
   </div>
 </footer>
-
