--- a/src/app/glycemie-form/glycemie-form.component.html
+++ b/src/app/glycemie-form/glycemie-form.component.html
@@ -1,3 +1,5 @@
+<div class="container">
+
 <div class="card my-5">
   <div class="card-body">
     <form (ngSubmit)="onSubmit()" #glycemieForm ="ngForm">
@@ -55,5 +57,6 @@
               class="btn btn-info">Submit</button>
     </form>
   </div>
+</div>
 </div>
 <router-outlet />
