--- a/src/app/update-user-form/update-user-form.component.html
+++ b/src/app/update-user-form/update-user-form.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="card my-5">
   <div class="card-body">
     <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
@@ -12,4 +13,5 @@
       <button type="submit" [disabled]="!userForm.valid" class="btn btn-info">Submit</button>
     </form>
   </div>
+</div>
 </div>
