--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,47 +1,61 @@
 .header {
-  background-color: #ffffff; /* Couleur de fond */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Ombre légère */
-  transition: all 0.3s ease; /* Transition douce */
+  background-color: #ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
 }
 
 .header .topbar {
-  background-color: #f8f9fa; /* Couleur de fond de la barre supérieure */
-  padding: 5px 0; /* Espacement intérieur de la barre supérieure */
-  font-size: 14px; /* Taille de police */
+  background-color: #f8f9fa;
+  padding: 5px 0;
+  font-size: 14px;
 }
 
 .header .topbar .contact-info i {
-  margin-right: 5px; /* Espacement à droite des icônes */
+  margin-right: 5px;
 }
 
 .header .topbar .contact-info a,
 .header .topbar .contact-info span {
-  color: #6c757d; /* Couleur du texte */
+  color: #6c757d;
 }
 
 .header .topbar .social-links a {
-  color: #6c757d; /* Couleur des icônes de réseaux sociaux */
-  margin-left: 10px; /* Espacement à gauche des icônes */
+  color: #6c757d;
+  margin-left: 10px;
 }
 
 .header .branding {
-  padding: 10px 0; /* Espacement intérieur */
+  padding: 10px 0;
 }
 
 .header .branding .sitename {
-  font-size: 24px; /* Taille de police du nom du site */
-  font-weight: bold; /* Gras */
-  color: #333333; /* Couleur du texte */
+  font-size: 24px;
+  font-weight: bold;
+  color: #007bff;
 }
 
 .header .cta-btn {
-  color: #ffffff; /* Couleur du texte du bouton */
-  background-color: #007bff; /* Couleur de fond du bouton */
-  padding: 10px 20px; /* Espacement du bouton */
-  border-radius: 5px; /* Bord arrondi du bouton */
-  transition: all 0.3s ease; /* Transition douce */
+  color: #ffffff;
+  background-color: #007bff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
 }
 
 .header .cta-btn:hover {
-  background-color: #0056b3; /* Couleur de fond du bouton au survol */
+  background-color: #0056b3;
+}
+@keyframes titleAnimation {
+  0% {
+    color: #555;
+  }
+  100% {
+    color: #333;
+  }
+}
+#hey {
+  background-color: #007bff;
+  padding: 10px 0;
+  text-align: center;
+  color: white;
 }
