--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,14 @@
 <header id="header" class="header">
+  <div id="hey">
+    <div class="contact-info">
+      <div>📞 1234-5678-9012</div>
+      <div>📧 Health.com</div>
+      <div>🕒 Mon - Sun </div>
+    </div>
+  </div>
   <div class="topbar">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-6 col-lg-6">
-          <div class="contact-info">
-            <i class="bi bi-envelope"></i> <a href="mailto:info@domain.com">medilab&#64;gmail.com</a>
-            <i class="bi bi-phone"></i> <span>+123 456 789</span>
-          </div>
-        </div>
         <div class="col-md-6 col-lg-6">
           <div class="social-links text-md-end">
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -22,9 +23,8 @@
 
   <div class="branding">
     <div class="container d-flex align-items-center justify-content-between">
-      <a class="logo d-flex align-items-center" routerLink="/">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+      <a class="logo d-flex align-items-center" routerLink="/home">
+        <img ngSrc="" alt="" fill>
         <h1 class="sitename">Medilab</h1>
       </a>
 
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" routerLink="/">Home</a>
+              <a class="nav-link active" routerLink="/home">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" routerLink="#about">About</a>
