--- a/src/app/glycemie-list/glycemie-list.component.html
+++ b/src/app/glycemie-list/glycemie-list.component.html
@@ -1,4 +1,5 @@
 <main class="main">
+  <div class="container">
   <div class="card my-5">
     <div class="card-body">
       <table class="table table-bordered table-striped">
@@ -32,7 +33,8 @@
     </div>
   </div>
   <app-chart [glycemies]="glycemies"></app-chart>
-  <canvas id="myChart"></canvas>
+  </div>
+
 </main>
 <router-outlet></router-outlet>
 
