--- a/src/app/update-glycemie-form/update-glycemie-form.component.html
+++ b/src/app/update-glycemie-form/update-glycemie-form.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="card my-5">
   <div class="card-body">
     <form [formGroup]="glycemieForm" (ngSubmit)="onSubmit()">
@@ -24,4 +25,5 @@
       <button type="submit" [disabled]="!glycemieForm.valid" class="btn btn-info">Submit</button>
     </form>
   </div>
+</div>
 </div>
