--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,4 +1,5 @@
 <main class="main">
+  <div class="container">
   <div class="card my-5">
     <div class="card-body">
       <table class="table table-bordered table-striped">
@@ -23,6 +24,7 @@
         </tbody>
       </table>
     </div>
+  </div>
   </div>
 </main>
 <router-outlet></router-outlet>
