--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,12 +1,11 @@
-<header id="header" class="header">
-  <div id="hey">
-    <div class="contact-info">
-      <div>📞 1234-5678-9012</div>
-      <div>📧 Health.com</div>
-      <div>🕒 Mon - Sun </div>
-    </div>
-  </div>
   <div class="topbar">
+    <div id="hey" class="d-flex justify-content-center">
+      <div class="contact-info">
+        <div>📞 1234-5678-9012</div>
+        <div>📧 Health.com</div>
+        <div>🕒 Mon - Sun</div>
+      </div>
+    </div>
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 col-lg-6">
@@ -20,7 +19,6 @@
       </div>
     </div>
   </div>
-
   <div class="branding">
     <div class="container d-flex align-items-center justify-content-between">
       <a class="logo d-flex align-items-center" routerLink="/home">
@@ -69,4 +67,4 @@
       </nav>
     </div>
   </div>
-</header>
+
