--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -34,28 +34,21 @@
   color: #007bff;
 }
 
-.header .cta-btn {
-  color: #ffffff;
-  background-color: #007bff;
-  padding: 10px 20px;
-  border-radius: 5px;
-  transition: all 0.3s ease;
-}
-
-.header .cta-btn:hover {
-  background-color: #0056b3;
-}
-@keyframes titleAnimation {
-  0% {
-    color: #555;
-  }
-  100% {
-    color: #333;
-  }
-}
 #hey {
   background-color: #007bff;
   padding: 10px 0;
   text-align: center;
   color: white;
+}
+
+#hey .contact-info {
+  display: flex;
+  justify-content: space-between;
+}
+
+#hey .contact-info > div {
+  margin: 0 10px;
+}
+.navbar-light .navbar-nav .nav-link {
+  color: blue;
 }
