--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,70 +1,45 @@
-  <div class="topbar">
-    <div id="hey" class="d-flex justify-content-center">
-      <div class="contact-info">
-        <div>📞 1234-5678-9012</div>
-        <div>📧 Health.com</div>
-        <div>🕒 Mon - Sun</div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6 col-lg-6">
-          <div class="social-links text-md-end">
-            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="branding">
-    <div class="container d-flex align-items-center justify-content-between">
-      <a class="logo d-flex align-items-center" routerLink="/home">
-        <img ngSrc="" alt="" fill>
+<header id="header" class="header sticky-top" xmlns:th="http://www.w3.org/1999/xhtml">
+  <div class="branding d-flex align-items-center">
+    <div class="container position-relative d-flex align-items-center justify-content-between">
+      <a routerLink="" class="logo d-flex align-items-center me-auto">
         <h1 class="sitename">Medilab</h1>
       </a>
-
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu"
-                aria-controls="navmenu" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navmenu">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" routerLink="/home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="#services">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="#developers">Developers</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="/glycemies">Glycemies</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="/addGlycemie">AddGlycemie</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="/users">Users</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="/adduser">AddUser</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="#contact">Contact</a>
-            </li>
-          </ul>
-          <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-        </div>
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a routerLink="" class="active">Home</a></li>
+          <li><a routerLink="#about">About</a></li>
+          <li><a routerLink="#services">Services</a></li>
+          <li class="dropdown">
+            <a href="#">
+              <span>Activities</span>
+              <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li class="dropdown">
+                <a href="#"><span>Glycemia</span> <i
+                  class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a routerLink="/addGlycemie">Add Glycemia</a></li>
+                  <li><a routerLink="/glycemies">Your Glycemies</a></li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="#"><span>User</span> <i
+                  class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a routerLink="/users">Our users</a></li>
+                  <li><a routerLink="/adduser">Add User</a></li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li><a th:href="@{/#contact}">Contact</a></li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
+      <img src="http://bootdey.com/img/Content/avatar/avatar1.png" alt="Profile Icon" class="profile-icon"
+           id="profileIcon"
+           style="position: fixed; top: 20px; right: 20px; height: 50px; width: 50px; border: 3px solid var(--nav-hover-color); border-radius: 50%; cursor: pointer; box-shadow: 0 0 10px rgba(25, 119, 204, 0.5);">
+
     </div>
   </div>
-
+</header>
